[metadata]
name = backblaze_analytics
author = KOLANICH
url = https://gitlab.com/KOLANICH/backblaze_analytics
summary = Scripts to analyse BackBlaze dataset of HDD data
long_description = file: ReadMe.md
keywords = HDD, reliability, statistics, BackBlaze, dataset, S.M.A.R.T., survivabilty, kaplan-meier, cox
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Science

[options]
packages = backblaze_analytics, backblaze_analytics.core, backblaze_analytics.augmenters, backblaze_analytics.tools, backblaze_analytics.fitters, backblaze_analytics.utils
setup_requires = setuptools_scm;
#test_suite = tests.tests.Tests

install_requires =
	AutoXGBoost @ git+https://gitlab.com/KOLANICH/AutoXGBoost.py.git
	HDDModelDecoder @ git+https://gitlab.com/KOLANICH/HDDModelDecoder.py.git
	NoSuspend @ git+https://gitlab.com/KOLANICH/NoSuspend.py.git
	lazily @ git+https://gitlab.com/KOLANICH/lazily.py.git
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git
	lifelines @ git+https://github.com/CamDavidsonPilon/lifelines.git
	tqdm @ git+https://github.com/tqdm/tqdm.git
	requests @ git+https://github.com/requests/requests.git
	pandas
	beautifulsoup4
	psutil
	lazy_object_proxy

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]